# SyncClipboard

./: .gitignore  README.md  build_all.sh  build_windows_deps.sh  main.prompt
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/syncclipboard/android/: App.kt
android/app/src/main/java/com/syncclipboard/android/crypto/: AesGcmCipher.kt
android/app/src/main/java/com/syncclipboard/android/data/: SecureConfigStore.kt
android/app/src/main/java/com/syncclipboard/android/net/: ApiService.kt  AuthRepository.kt  ConnectionManager.kt  MessageCodec.kt
android/app/src/main/java/com/syncclipboard/android/service/: BootReceiver.kt  ClipboardAccessibilityService.kt  ClipboardReaderActivity.kt  ClipboardService.kt  KeepAliveService.kt  SyncWorker.kt
android/app/src/main/java/com/syncclipboard/android/ui/: LogViewerActivity.kt  MainActivity.kt
android/app/src/main/java/com/syncclipboard/android/util/: AppLog.kt  AutoStartHelper.kt  ClipboardCache.kt  ConfigManager.kt  CryptoUtil.kt  FileTransferManager.kt  MaskUtil.kt  WebSocketManager.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  data_extraction_rules.xml  file_paths.xml  network_security_config.xml
common/: auth_http.c  auth_http.h  codec.c  codec.h  config.c  config.h  crypto.c  crypto.h  file_transfer.c  file_transfer.h  log.c  log.h  msg.c  msg.h  ws_client.c  ws_client.h
common/ft/: ft_addr.c  ft_auth.c  ft_b64_sha.c  ft_internal.h  ft_lan.c  ft_nat.c  ft_proto.c  ft_socket.c
docs/: MIGRATION.md  PROTOCOL_V2.md  SECURITY.md
linux/: CMakeLists.txt  config.ini  main.c
linux/service/: README.md  start.sh  sync-clipboard.service
server/: pom.xml  users.example.properties  users.properties
server/scripts/: gen-self-signed.sh
server/src/main/java/com/syncclipboard/: SyncClipboardServerApplication.java
server/src/main/java/com/syncclipboard/cli/: UserAdminCommand.java
server/src/main/java/com/syncclipboard/config/: AppProperties.java  SecurityConfig.java  WebSocketConfig.java
server/src/main/java/com/syncclipboard/controller/: AuthController.java  ClipboardWebSocketHandler.java
server/src/main/java/com/syncclipboard/model/: ClientSession.java  Message.java  WsMessage.java
server/src/main/java/com/syncclipboard/security/: JwtAuthenticationFilter.java  JwtHandshakeInterceptor.java  JwtService.java  LoginRateLimiter.java
server/src/main/java/com/syncclipboard/service/: ClipboardCacheService.java  FileTransferService.java  SessionManager.java  UdpReflectorService.java  UserService.java
server/src/main/java/com/syncclipboard/ws/: LegacyRejectingHandler.java  MessageDispatcher.java  V2WebSocketHandler.java
server/src/main/resources/: application.properties
windows/: CMakeLists.txt  README.md  config.ini  main.c
